--- a/client/src/features/modal/modal.css
+++ b/client/src/features/modal/modal.css
@@ -28,7 +28,7 @@
   padding: 20px;
   border-radius: 12px;
   background-color: white;
-  width: 50vh;
+  width: 360px;
   transform: scale(0.5);
   transition: 0.4s all;
 }
