--- a/client/src/features/cart/style.css
+++ b/client/src/features/cart/style.css
@@ -1,15 +1,15 @@
-.product_item {
+.cart_item {
   margin-bottom: 10px;
   padding: 10px;
   border-radius: 10px;
   width: 200px;
   height: 200px;
 }
-.product_list {
+.cart_list {
   display: flex;
   justify-content: space-around;
 }
-.product_item img {
+.cart_item img {
   width: 100%;
   height: 100%;
 }
