--- a/client/src/features/cart/style.css
+++ b/client/src/features/cart/style.css
@@ -1,15 +1,40 @@
 .cart_item {
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   padding: 10px;
   border-radius: 10px;
-  width: 200px;
+  width: 60%;
   height: 200px;
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
 }
 .cart_list {
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  text-align: center;
 }
 .cart_item img {
-  width: 100%;
-  height: 100%;
+  width: 150px;
+  height: 150px;
+}
+.products_spec {
+  text-align: left;
+  width: 25%;
+}
+.quantityCounter {
+  text-align: center;
+  border: none;
+}
+.quantity_controls {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  width: 15%;
+}
+input[type='number']::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
